jenkins/k8s/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.gladeos.net`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: gladeos-net-tls
